--- a/app/src/main/res/menu/context_menu.xml
+++ b/app/src/main/res/menu/context_menu.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:title="Simple item" android:id="@+id/item_context" />
+    <item
+        android:id="@+id/call"
+        android:orderInCategory="100"
+        android:title="Call"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/sms"
+        android:orderInCategory="100"
+        android:title="Sms"
+        app:showAsAction="never" />
 </menu>
